# compliant-gym

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: addedMass.hpp  compliantContact.hpp  contactContainer.hpp  grid.hpp  parameters.hpp  terrainParameters.hpp  terrainStiffnessGrid.hpp  worldBridge.hpp
module/controller/: CMakeLists.txt
module/controller/common/: BasicEigenTypes.hpp  neuralNet.hpp  raibotController.hpp
module/controller/raibot_compliant_controller/: raibot_compliant_controller.cpp  raibot_compliant_controller.hpp
module/controller/raibot_compliant_controller/network/network/: eout_mean.csv  estimator.txt  obs_var.csv
module/controller/raibot_compliant_controller/network/network_efc83c9e_27000/: actor.txt  encoder.txt  eout_var.csv  obs_mean.csv
module/grid/: grid.hpp
rsc/raibot/: CMakeLists.txt  nominal_joint_config.txt  package.xml
rsc/raibot/config/: joint_names_raibot.yaml
rsc/raibot/launch/: display.launch  gazebo.launch
rsc/raibot/meshes/: LF_FOOT.STL  LF_THIGH.STL  LH_SHANK.STL  LH_THIGH.STL  RF_FOOT.STL  RF_SHANK.STL  RF_THIGH.STL  RH_FOOT.STL  RH_SHANK.STL  RH_THIGH.STL
rsc/raibot/urdf/: raibot.csv  raibot.urdf  raibot_oneLeg.urdf  raibot_simplified.urdf
src/: cylinder_visualizer.cpp  robot_visualizer.cpp
